--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <title>Hima Madhavan</title>
 </head>
 <body>
-
-    <h1>here we are</h1>
+<h1>Hello World</h1>
 <h1>Hello this is a test</h1>
-<p>let me see</p>
+<p></p>
 
 </body>
 </html>
